update tcc2 config

--- a/tcc2/bibliografia.bib
+++ b/tcc2/bibliografia.bib
@@ -1,97 +1,363 @@
-@manual{inmetro2003,
-	Author = {INMETRO},
-	Title = {Vocabulário internacional de termos fundamentais e gerais de
-	metrologia},
+@article{frank1931,
+	Author = {R. T. Frank},
+	Title = {The hormonal causes of premenstrual tension},
+	Year = {1931}
+}
+
+@article{poroma2014,
+	Author = {Inger Sundström Poromaa and Malin Gingnell},
+	Title = {Menstrual cycle influence on cognitive function and emotion processing—from a reproductive perspective},
+	Year = {2014}
+}
+
+@article{rosa2016,
+	Author = {Thaniery Xavier Rosa and Sandra Cristina Catelan-Mainardes},
+	Title = {ALTERAÇÕES COMPORTAMENTAIS DURANTE O CICLO MENSTRUAL DA MULHER},
+	Year = {2016}
+}
+
+@article{becker2005,
+	Author = {J. B. Becker and A. P. Arnold and J. K. Berkley and J. D. Blaustein and A. L. Eckel and E. Hampson and et al},
+	Title = { Strategies and methods for research on sex differences in brain and behavior},
+	Year = {2005}
+}
+
+@article{lenton1984a,
+	Author = {E. A. Lenton and B. M. Landgren and L. Sexton and R. Harper},
+	Title = {Normal variation in the length of the follicular phase of the menstrual cycle: effect of chronological age},
+	Year = {1984}
+}
+
+@article{brondin2008,
+	Author = {T. Brodin and T. Bergh and L. Berglund and N. Hadziosmanovic and J. Holte},
+	Title = {Menstrual cycle length is an age-independent marker of female fertility: results from 6271 treatment cycles of in vitro fertilization},
+	Year = {2008}
+}
+
+@article{phillips1992,
+	Author = {S. M. Phillips and B. B. Sherwin},
+	Title = {Variations in memory function and sex steroid hormones across the menstrual cycle.},
+	Year = {1992}
+}
+
+@book{fritz2010,
+author = {L. Speroff and M. A. Fritz},
+title = {Clinical Gynecologic Endocrinology and Infertility},
+year = {20010},
+edition = {8th},
+publisher = {Wolters Kluwer/Lippincott, Williams and Wilkins},
+address = {USA}
+}
+
+@article{nikas2003,
+	Author = {G. Nikas and A. Makrigiannakis},
+	Title = {Endometrial pinopodes and uterine receptivity},
+	Year = {2003}
+}
+
+@article{bixo1997,
+	Author = {M. Bixo and A. Andersson and B. Winblad and R. H. Purdy and T. Backstrom},
+	Title = {5alpha-pregnane-3,20-dione and 3alpha-hydroxy-5alpha-pregnane-20-one in specific regions of the human female brain in different endocrine states.},
+	Year = {1997}
+}
+
+@article{gruber2002,
+	Author = {C. J. Gruber and W. Tschugguel and C. Schneeberger and J. C. Huber},
+	Title = {Production and actions of estrogens},
+	Year = {2002}
+}
+
+@article{brinton2008,
+	Author = {R. D. Brinton and F. R. Thompson and M. R. Foy and M. Baudry and J. Wang and C. E. and et al.},
+	Title = {Progesterone receptors: form and function in brain. Front. Neuroendocrinol},
+	Year = {2008}
+}
+
+@article{gasbarri2008,
+	Author = {A . Gasbarri and A. Pompili and A. d’Onofrio and A. Cifariello and M. C. Tavares and C. Tomaz},
+	Title = { Working memory for emotional facial expressions: role of the estrogen in young women},
+	Year = {2008}
+}
+
+@article{derntl2008,
+	Author = {B. Derntl and I. Kryspin-Exner and E. Fernbach and E. Moser and U. Habel },
+	Title = { Emotion recognition accuracy in healthy young females is associated with cycle phase},
+	Year = {2008}
+}
+
+@article{kirschbaum1999,
+	Author = {C. Kirschbaum and B. M. Kudielka and J. Gaab and N. C. Schommer and D. H. Hellhammer},
+	Title = { Impact of gender, menstrual cycle phase, and oral contraceptives on the activity of the hypothalamus-pituitary-adrenal axis},
+	Year = {1999}
+}
+
+@article{lam2002,
+	Author = {L. T. Lam and S. L. kirby},
+	Title = {Is Emotional Intelligence an Advantage? An Exploration of the Impact of Emotional and General Intelligence on Individual Performance},
+	Year = {2002}
+}
+
+@article{salovey1990,
+	Author = {P. Salovey and J. D. Mayer},
+	Title = { Emotional intelligence. Imagination, Cognition, and Personality},
+	Year = {1990}
+}
+
+@article{ecochard2001,
+	Author = {R. Ecochard and H. Boehringer and M. Rabilloud and H. Marret},
+	Title = { Chronological aspects of ultrasonic, hormonal and other indirect indices of ovulation},
+	Year = {2001}
+}
+
+@article{wideman2013,
+	Author = {L. Wideman and M. M. Montgomery and B. J. Levine and B. D. Beynnon and S. J. Shultz},
+	Title = { Accuracy of Calendar-Based Methods for Assigning Menstrual Cycle Phase in Women},
+	Year = {2013}
+}
+
+@article{hausmann2000,
+	Author = {M. Hausmann and D. Slabbekoorn and SHM Van Goozen },
+	Title = {Sex hormones affect spatial abilities during the menstrual cycle},
+	Year = {2000}
+}
+
+@article{Rosenberg2002,
+	Author = {L. Rosenberg and S. Park},
+	Title = {Verbal and spatial functions across the menstrual cycle in healthy young women},
+	Year = {2002}
+}
+
+@article{derntl2013,
+	Author = {B. Derntl and R. L. Hack and I. Kryspin-Exner and U. Habel},
+	Title = {Association of menstrual cycle phase with the core components of empathy},
+	Year = {2013}
+}
+@article{obrien2011,
+	Author = {P. O’Brien and M. Backstrom and T. Brown and C. Dennerstein and L. Endicott and J.Epperson,},
+	Title = {Towards a consensus on diagnostic criteria, measurement and trial design of the premenstrual disorders: the ISPMD Montreal consensus},
+	Year = {2011}
+}
+
+@article{mishell2005,
+	Author = {DR Mishell},
+	Title = {Premenstrual disorders: Epidemiology and disease burden},
+	Year = {2005}
+}
+
+@article{biggs2011,
+	Author = {WS Biggs AND RH Demuth},
+	Title = {Premenstrual syndrome and premenstrual dysphoric disorder},
+	Year = {2011}
+}
+
+@article{bobadilla2013,
+	Author = {J. Bobadilla and F. Ortega and A. Hernando and A. Gutiérrez},
+	Title = {Recommender systems survey},
+	Year = {2013}
+}
+
+
+@article{adomavicius2005,
+	Author = {G. Adomavicius and A. Tuzhilin},
+	Title = {Toward the Next Generation of Recommender Systems: A Survey of the State-of-the-Art and Possible Extensions},
+	Year = {2005}
+}
+
+@article{felferning2008,
+	Author = {A. Felfernig and R. Burke},
+	Title = {Constraint-based Recommender Systems: Technologies and Research Issues},
+	Year = {2008}
+}
+
+@article{maki2002,
+	Author = {P. M. Make and J. B. Rich and R. S. Rosenbaum},
+	Title = {Implicit memory varies across the menstrual cycle: estrogen effects in young women},
+	Year = {2002}
+}
+
+@article{courvoisier2013,
+	Author = {D. S. Courvoisier and O. Renaud and C. Geiser and K. Paschke and K. Gaudy and K. Jordan},
+	Title = {Sex hormones and mental rotation: an intensive longitudinal investigation.},
+	Year = {2013}
+}
+
+@article{hampson2014,
+	Author = {E. Hampson and N. Levy-Cooperman and J. M. Korman},
+	Title = {Estradiol and mental rotation: relation to dimensionality, difficulty, or angular disparity?},
+	Year = {2014},
+	Url = {Horm. Behav. 65, 238–248. doi: 10.1016/j.yhbeh.2013.12.016}
+}
+
+@article{becker1982,
+	Author = {D. Becker and O. D. Creutzfeldt and M. Schwibbe and W. Wuttke},
+	Title = {Changes in physiological, EEG and psychological parameters in women during the spontaneous menstrual cycle and following oral contraceptives.},
+	Year = {1982}
+}
+
+@article{mordecai2008,
+	Author = {K. L. Mordecai and L. H. Rubin and P. M. Make},
+	Title = {Effects of menstrual cycle phase and oral contraceptive use on verbal memory},
+	Year = {2008}
+}
+
+@article{solis2004,
+	Author = {S. Solis-Ortiz and M. A. Guevara and M. Corsi-Cabrera},
+	Title = {Performance in a test demanding prefrontal functions is favored by early luteal phase progesterone: an electroencephalographic study},
+	Year = {2004}
+}
+
+@article{flutter2017,
+	Author = {Google},
+	Title = {Flutter},
+	Year = {2017}
+}
+
+@article{firebase2011,
+	Author = {Google},
+	Title = {Firabase},
+	Year = {2011}
+}
+
+@article{trello2011,
+	Author = {Atlassian},
+	Title = {Trello},
+	Year = {2011}
+}
+
+@article{zenhub2020,
+	Author = {ZenHub},
+	Title = {ZenHub},
+	Year = {2020}
+}
+
+@article{slack2013,
+	Author = {Slack},
+	Title = {Slack},
+	Year = {2013}
+}
+
+@article{vscode2015,
+	Author = {Visual Studio Code},
+	Title = {Visual Studio Code},
+	Year = {2015}
+}
+
+@article{lm2020,
+	Author = {Linux Mint},
+	Title = {Linux Mint},
+	Year = {2020}
+}
+
+@article{android2020,
+	Author = {Android Studio},
+	Title = {Android Studio},
+	Year = {2020}
+}
+
+@article{git2020,
+	Author = {Git},
+	Title = {Git},
+	Year = {2020}
+}
+
+@article{github2020,
+	Author = {GitHub},
+	Title = {GitHub},
+	Year = {2020}
+}
+
+@article{latex2020,
+	Author = {Latex},
+	Title = {Latex},
+	Year = {2020}
+}
+
+@article{figma2020,
+	Author = {Figma},
+	Title = {Figma},
+	Year = {2020}
+}
+
+@book{ACOG2000,
+author = {ACOG},
+title = {American College of Obstetrics and Gynecology: ACOG},
+year = {2000},
+publisher = {ACOG},
+address = {Washington,DC},
+}
+@book{guyton2012,
+author = {A. C. Guyton and J. E. Hall},
+title = {Tratado de Fisiologia médica},
+year = {2012},
+publisher = {Elservier},
+address = {Rio de Janeiro}, 
+}
+@article{mauricio,
+	Author = {M. Serrano},
+	Title = {Um Sistema de Recomendação Para Mídias Baseado em Conteúdo Nebuloso},
+	Year = {2006},
+}
+
+@article{paulson2003,
+	Author = {P. Paulson and A. Tzanavari},
+	Title = {Combining Collaborative and Content-Based Filtering Using
+Conceptual Graphs },
+	Year = {2003},
+}
+
+@article{son2017,
+	Author = {J. Son and S. B. Kim},
+	Title = {Content-based filtering for recommendation systems using multiattribute networks },
+	Year = {2017},
+}
+
+@article{breese2013,
+	Author = {J. S. Breese and D, Heckerman and C. Kadie },
+	Title = {Empirical Analysis of Predictive Algorithms for Collaborative Filtering },
 	Year = {2013},
-	Address = {Rio de Janeiro, Brasil},
-	Pages = {75},
-	isbn = {85-87090-90-9},
 }
 
-@inproceedings{soviero1997,
-	Author = {P. A. O. Soviero and L. G. M. Lavagna},
-	Title = {A Numerical Model for Thin Airfoils in Unsteady Motion},
-	Year = {1997},
-	Pages = {332-340},
-	Volume = {19},
-	Number = {3},
-	Booktitle = {Journal of the Brazilian Societyt Mechanical Sciences},	
-}
-
-@inproceedings{sparrow1980,
-	Author = {E. M. Sparrow},
-	Title = {Forced Convection Heat Transfer in a Duct Having Spanwise-Periodic
-	Rectangular Protuberances},
-	Year = {1980},
-	Pages = {149-167},
-	Volume = {3},
-	Booktitle = {Numerical Heat Transfer},
-}
-
-@article{clark1986,
-	Author = {J. A. Clark},
-	Title = {Private Communication},
-	Year = {1986},
-	Address = {University of Michigan},
-}
-
-@article{arruda2007,
-	Author = {M. B. B. Arruda},
-	Title = {Como fazer referências: bibliográficas, eletrônicas e demais
-	formas de documentos},
-	Year = {2007},
-	Url = {http://bu.ufsc.br/framerefer.html}
-}
-
-@article{coimbra1978,
-	Author = {A. L. Coimbra},
-	Title = {Lessons of Continuum Mechanics},
-	Year = {1978},
-	Address = {São Paulo, Brazil},
-	Pages = {428},
-	Editor = {Edgard Blücher},
-}
-
-@inproceedings{bordalo1989,
-	Author = {S. N. Bordalo and J. H. Ferziger and S. J. Kline},
-	Title = {The Development of Zonal Models for Turbulence},
-	Year = {1989},
-	Pages = {41-44},
-	Booktitle = {Proceedings of the 10th Brazilian Congress of Mechanical
-	Engineering}, 
-	Volume = {1},	
-}
-
-@manual{NBR14724:2011,
-	Address = {Rio de Janeiro},
-	Date-Added = {2012-12-15 20:34:08 +0000},
-	Date-Modified = {2012-12-15 20:35:25 +0000},
-	Month = mar,
-	Org-Short = {ABNT},
-	Organization = {Associa{\c c}\~ao Brasileira de Normas T\'ecnicas},
-	Pages = 15,
-	Subtitle = {Informa{\c c}\~ao e documenta{\c c}\~ao --- trabalhos acad\^emicos --- apresenta{\c c}\~ao},
-	Title = {{NBR} 14724},
-	Year = 2011
-}
-
-@manual{NBR6034:2000,
-	Address = {Rio de Janeiro},
-	Org-Short = {ABNT},
-	Organization = {Associa{\c c}\~ao Brasileira de Normas T\'ecnicas},
-	Subtitle = {Informa{\c c}\~ao e documenta{\c c}\~ao --- Referências},
-	Title = {{NBR} 14724},
-	Year = 2000
-}
-
-@book{Sommerville2007,
-author = {Sommerville, Ian},
-title = {Software Engineering},
-year = {2007},
-isbn = {978-0-321-31379-9, 0-321-31379-8},
-edition = {9th},
-publisher = {Addison-Wesley Publishing Company},
-address = {USA},
+@article{burke2002,
+	Author = {R. Burke },
+	Title = {Hybrid Recommender Systems: Survey and Experiments },
+	Year = {2002},
 }
 
 
+@book{gerhardt2009,
+author = {E. T. GERHARDT and D. T. SILVEIRA },
+title = {Métodos de Pesquisa.},
+year = {2009},
+publisher = {Luciane Delani},
+}
+
+@book{gil1991,
+author = {C. A. GIL },
+title = {Como Elaborar Projetos de Pesquisa.},
+year = {1991},
+publisher = {EDITORA ATLAS S.A},
+}
+
+@article{draper2018,
+	Author = {C. F. Draper and K. Duisters and B. Weger and A. Chakrabarti and A. C. Harms and L. Brennan and T. Hankemeier and L. Gouletand T. Konz and F. P. Martin and S. Moco and J. van der Greef },
+	Title = {Menstrual cycle rhythmicity: metabolic patterns in healthy women},
+	Year = {2018}
+}
+
+@article{reed2018,
+	Author = {B. G. Reed and B. R. Carr},
+	Title = {The Normal Menstrual Cycle and the Control of Ovulation},
+	Year = {2018}
+}
+
+@article{scrum2017,
+	Author = {SCRUM-GUIDE},
+	Title = {Scrum},
+	Year = {2017}
+}
+
+@article{leticia,
+	Author = {L. S. Santos},
+	Title = {Sistema de Recomendação para Atribuição de Tarefas de Testes Baseado em Perfil de Testadores},
+	Year = {2019}
+}
