--- a/tcc2/editaveis/abreviaturas.tex
+++ b/tcc2/editaveis/abreviaturas.tex
@@ -1,6 +1,13 @@
 \begin{siglas}
-  \item[Fig.] Area of the $i^{th}$ component
-  \item[456] Isto é um número
-  \item[123] Isto é outro número
-  \item[lauro cesar] este é o meu nome
+  \item[TCB] Temperatural corporal basal
+  \item[LH] Hormônio luteinizante
+  \item[FSH] Hormônio folículo estimulante
+  \item[AC] Anticoncepcional
+  \item[MEIS] \textit{Multifactor Emotional Intelligence Scale}
+  \item[TDPM] Transtorno disfórico pré menstrual 
+  \item[TCC] Trabalho de conclusão de curso
+  \item[TPM] Tensão pré-menstrual  
+  \item[SR] Sistema de recomendação
+  \item[FC] Filtragem colaborativa
+  \item[kNN] \textit{K Nearest Neighbors}
 \end{siglas}
