--- a/tcc2/editaveis/agradecimentos.tex
+++ b/tcc2/editaveis/agradecimentos.tex
@@ -1,9 +1,33 @@
 \begin{agradecimentos}
-A inclusão desta seção de agradecimentos é opcional, portanto, sua inclusão 
-fica a critério do(s) autor(es), que caso deseje(em) fazê-lo deverá(ão) 
-utilizar este espaço, seguindo a formatação de \textit{espaço simples e 
-fonte padrão do texto (sem negritos, aspas ou itálico}.
 
-\textbf{Caso não deseje utilizar os agradecimentos, deixar toda este arquivo
-em branco}.
-\end{agradecimentos}
+    Agradeço à toda minha família, a qual eu amo muito. Em especial, aos meus pais,
+    Maria do Carmo e Edir, minha irmã Emanuelle, minha Tia Nilza e minha madrinha
+    Delma, pelo amor e apoio incondicional durante a minha trajetória na Faculdade do Gama.
+    
+    Aos meus amigos, pelo apoio e troca de experiência. Em especial, à Martha, ao Marcos
+    Vinícius e à Fabiana, por sempre me acompanharem nessa jornada. 
+    
+    Ao meu namorado, Rodrigo, pelo apoio e amor incondicional, por ter me dado
+    suporte durante toda dificuldade e ter comemorado cada etapa avançada ao meu lado.
+    
+    Às mulheres que se disponibilizaram a participar do caso de estudo, à Letícia e às trabalhadoras do santuário Anandamayi pela inspiração que deu origem ao tema.
+    
+    À Universidade de Brasília por ter contribuído na minha formação profissional e
+    como pessoa, mostrando-me um mundo novo e as ferramentas necessárias para a constru-
+    ção de uma sociedade mais justa e igualitária. Em particular, à Faculdade do Gama.
+    
+    Aos meus orientadores, Milene Serrano e Maurício Serrano, pela inspiração, paciência e compromentimento 
+    em guiar-me durante esse processo, sempre oferecendo suporte técnico e psicológico que fizeram 
+    dessa jornada uma trajetória muito gratificante. 
+    
+    Agradeço a todos os cientistas que possibilitaram a realização desse trabalho e espero que 
+    o meu trabalho também seja importante para que outras pessoas possam dar continuidade nesse 
+    estudo. 
+    
+    Agradeço, por fim, a mim mesma pela persistência e coragem; por me dedicar por
+    incontáveis horas a este sonho; por acreditar que é possível construir algo valioso a partir
+    da união de oportunidade, boa vontade e amor; por conseguir, mesmo diante de tantas
+    dificuldades, finalizar esta etapa da minha vida.
+    
+    \end{agradecimentos}
+    
