--- a/tcc2/editaveis/resumo.tex
+++ b/tcc2/editaveis/resumo.tex
@@ -1,17 +1,23 @@
 \begin{resumo}
- O resumo deve ressaltar o objetivo, o método, os resultados e as conclusões 
- do documento. A ordem e a extensão
- destes itens dependem do tipo de resumo (informativo ou indicativo) e do
- tratamento que cada item recebe no documento original. O resumo deve ser
- precedido da referência do documento, com exceção do resumo inserido no
- próprio documento. (\ldots) As palavras-chave devem figurar logo abaixo do
- resumo, antecedidas da expressão Palavras-chave:, separadas entre si por
- ponto e finalizadas também por ponto. O texto pode conter no mínimo 150 e 
- no máximo 500 palavras, é aconselhável que sejam utilizadas 200 palavras. 
- E não se separa o texto do resumo em parágrafos.
 
- \vspace{\onelineskip}
+    Durante o ciclo menstrual, pessoas passam por várias mudanças hormonais que podem levar a 
+    mudanças de humor, comportamento e sintomas físicos. Essas mudanças podem influenciar  
+    positivamente ou negativamente a realização de certas tarefas cotidianas. Para 
+    ajudar no autoconhecimento, melhorar a inteligência emocional 
+    dessas pessoas e possibilitar que elas utilizem dos benefícios e lidem com os 
+    malefícios 
+    de forma saudável e consciente, esse trabalho propõe a 
+    realização de um aplicativo com um sistema de sugestão de tarefas baseado em 
+    perfil e fase do ciclo menstrual. Esse sistema utiliza algoritmos de sistema 
+    de recomendação, procurando sugerir tarefas 
+    que demandam mais ou menos energia para serem executadas. Com o levantamento bibliográfico, 
+    foi possível utilizar o método do calendário para determinar a fase do ciclo. Juntamente com o 
+    estudo de caso, foi possível levantar os perfis e tarefas cotidianas a serem utilizados no sistema de 
+    recomendação.
     
- \noindent
- \textbf{Palavras-chave}: latex. abntex. editoração de texto.
-\end{resumo}
+     \vspace{\onelineskip}
+        
+     \noindent
+     \textbf{Palavras-chave}: ciclo menstrual. sistema de recomendação. aplicativo. influência das fases.
+    \end{resumo}
+    
