--- a/tcc2/fixos/pacotes.tex
+++ b/tcc2/fixos/pacotes.tex
@@ -13,3 +13,6 @@
 \usepackage[alf]{abntex2cite}
 \usepackage{bold-extra}
 \usepackage{eso-pic}
+\usepackage{multirow}
+\usepackage[table,xcdraw]{xcolor}
+\usepackage{hyphenat}
