--- a/tcc2/tcc.tex
+++ b/tcc2/tcc.tex
@@ -28,11 +28,15 @@
 \textual
 
 \input{editaveis/introducao}
-\input{editaveis/aspectosgerais}
-\input{editaveis/consideracoes}
-\input{editaveis/textoepostexto}
-\input{editaveis/elementosdotexto}
-\input{editaveis/elementosdopostexto}
+\input{editaveis/referencialteorico}
+\input{editaveis/suporteTecnologico}
+\input{editaveis/metodologia}
+\input{editaveis/proposta}
+\input{editaveis/capfinal}
+%\input{editaveis/consideracoes}
+%\input{editaveis/textoepostexto}
+%\input{editaveis/elementosdotexto}
+%\input{editaveis/elementosdopostexto}
 
 \bookmarksetup{startatroot} 
 
