--- a/tcc2/editaveis/apendices.tex
+++ b/tcc2/editaveis/apendices.tex
@@ -1,13 +1,119 @@
 \begin{apendicesenv}
 
-\partapendices
-
-\chapter{Primeiro Apêndice}
-
-Texto do primeiro apêndice.
-
-\chapter{Segundo Apêndice}
-
-Texto do segundo apêndice.
-
-\end{apendicesenv}
+    \partapendices
+    \chapter{Tabulação Primeiro Questionário}
+     
+        \begin{figure}[ht]
+            \centering
+            \includegraphics[keepaspectratio=true,scale=0.6]{figuras/Tab.pdf}
+        \end{figure}
+        
+        \begin{figure}[ht]
+            \centering
+            \includegraphics[keepaspectratio=true,scale=0.7]{figuras/Tab2.pdf}
+        \end{figure}
+        
+        \begin{figure}[ht]
+            \centering
+            \includegraphics[keepaspectratio=true,scale=0.7]{figuras/Tab3.pdf}
+        \end{figure}
+        
+        \begin{figure}[ht]
+            \centering
+            \includegraphics[keepaspectratio=true,scale=0.7]{figuras/Tab4.pdf}
+        \end{figure}
+        
+        \begin{figure}[ht]
+            \centering
+            \includegraphics[keepaspectratio=true,scale=0.7]{figuras/Tab5.pdf}
+        \end{figure}
+        
+        \begin{figure}[ht]
+            \centering
+            \includegraphics[keepaspectratio=true,scale=0.7]{figuras/Tab6.pdf}
+        \end{figure}
+        
+        \begin{figure}[ht]
+            \centering
+            \includegraphics[keepaspectratio=true,scale=0.7]{figuras/Tab7.pdf}
+        \end{figure}
+        
+        \begin{figure}[ht]
+            \centering
+            \includegraphics[keepaspectratio=true,scale=0.7]{figuras/Tab8.pdf}
+        \end{figure}
+        
+        \begin{figure}[ht]
+            \centering
+            \includegraphics[keepaspectratio=true,scale=0.7]{figuras/Tab9.pdf}
+        \end{figure}
+        
+        \begin{figure}[ht]
+            \centering
+            \includegraphics[keepaspectratio=true,scale=0.7]{figuras/Tab10.pdf}
+        \end{figure}
+        
+        \begin{figure}[ht]
+            \centering
+            \includegraphics[keepaspectratio=true,scale=0.7]{figuras/Tab11.pdf}
+        \end{figure}
+        
+        \begin{figure}[ht]
+            \centering
+            \includegraphics[keepaspectratio=true,scale=0.7]{figuras/Tab12.pdf}
+        \end{figure}
+        
+        \begin{figure}[ht]
+            \centering
+            \includegraphics[keepaspectratio=true,scale=0.7]{figuras/Tab13.pdf}
+        \end{figure}
+        
+        \begin{figure}[ht]
+            \centering
+            \includegraphics[keepaspectratio=true,scale=0.7]{figuras/Tab14.pdf}
+        \end{figure}
+        
+        \begin{figure}[ht]
+            \centering
+            \includegraphics[keepaspectratio=true,scale=0.7]{figuras/Tab15.pdf}
+        \end{figure}
+        
+        \begin{figure}[ht]
+            \centering
+            \includegraphics[keepaspectratio=true,scale=0.7]{figuras/Tab16.pdf}
+        \end{figure}
+        
+        \begin{figure}[ht]
+            \centering
+            \includegraphics[keepaspectratio=true,scale=0.7]{figuras/Tab17.pdf}
+        \end{figure}
+        
+        \begin{figure}[ht]
+            \centering
+            \includegraphics[keepaspectratio=true,scale=0.7]{figuras/Tab18.pdf}
+        \end{figure}
+        
+        \begin{figure}[ht]
+            \centering
+            \includegraphics[keepaspectratio=true,scale=0.7]{figuras/Tab19.pdf}
+        \end{figure}
+        
+        \begin{figure}[ht]
+            \centering
+            \includegraphics[keepaspectratio=true,scale=0.7]{figuras/Tab20.pdf}
+        \end{figure}
+        
+        \begin{figure}[ht]
+            \centering
+            \includegraphics[keepaspectratio=true,scale=0.7]{figuras/Tab21.pdf}
+        \end{figure}
+        
+        \begin{figure}[ht]
+            \centering
+            \includegraphics[keepaspectratio=true,scale=0.7]{figuras/Tab22.pdf}
+        \end{figure}
+        
+        
+        
+    \end{apendicesenv}
+    
