--- a/tcc2/editaveis/informacoes.tex
+++ b/tcc2/editaveis/informacoes.tex
@@ -1,21 +1,21 @@
 % Dados pessoais
-\autor{Nome do Autor}
-\curso{Nome do Curso}
+\autor{Mikhaelle de Carvalho Bueno}
+\curso{Engenharia de Software}
 
 % Dados do trabalho
-\titulo{Título: Subtítulo do Trabalho}
-\data{2013}
-\palavraChaveUm{Palavra-chave01}
-\palavraChaveDois{Palavra-chave02}
+\titulo{Aplicativo para Recomendações de Tarefas Baseadas em Perfil e Fase do Ciclo Menstrual}
+\data{2022}
+\palavraChaveUm{Fases do Ciclo Menstrual}
+\palavraChaveDois{Aplicativo com Sistema de Recomendação}
 
 % Dados da orientacao
-\orientador{Titulação Acadêmica e Nome do Orientador}
-\coorientador{quando houver, Titulação Acadêmica e Nome do Orientador}
+\orientador{Profª. Drª. Milene Serrano}
+\coorientador{Prof. Dr. Maurício Serrano}
 
 % Dados para a ficha catalográfica
 \cdu{02:141:005.6}
 
 % Dados da aprovação do trabalho
-\dataDaAprovacao{01 de junho de 2013 -- Data da aprovação do trabalho}
-\membroConvidadoUm{Titulação e Nome do Professor Convidado 01}
-\membroConvidadoDois{Titulação e Nome do Professor Convidado 02}
+\dataDaAprovacao{15 de dezembro de 2022}
+\membroConvidadoUm{Prof. Dr. Maurício Serrano}
+\membroConvidadoDois{Profª. Mª. Fabiana Freitas Mendes}
