--- a/tcc2/editaveis/introducao.tex
+++ b/tcc2/editaveis/introducao.tex
@@ -1,9 +1,212 @@
 \chapter*[Introdução]{Introdução}
 \addcontentsline{toc}{chapter}{Introdução}
 
-Este documento apresenta considerações gerais e preliminares relacionadas 
-à redação de relatórios de Projeto de Graduação da Faculdade UnB Gama 
-(FGA). São abordados os diferentes aspectos sobre a estrutura do trabalho, 
-uso de programas de auxilio a edição, tiragem de cópias, encadernação, etc.
+Neste capítulo, serão descritos a contextualização, apresentando brevemente o tema; a justificativa, 
+apesentando os porquês da elaboração do trabalho; os objetivos geral e específicos e a organização dos 
+capítulos dessa monografia.
 
-Este template é uma adaptação do ABNTeX2\footnote{\url{https://github.com/abntex/abntex2/}}.
+\section{Contextualização}
+
+O ciclo menstrual feminino começou a ser pesquisado, cientificamente, na década de 1930 \cite{frank1931}.
+Desde essa iniciativa, com os avanços da ciência e da medicina, métodos cada vez mais sofisticados e 
+acessíveis para análise hormonal possibilitaram também vários estudos nessa área que ainda intriga 
+muitos cientistas da medicina, psicologia e a sociedade em geral.
+
+
+Em 2005, estratégias e métodos foram estabelecidos para estudar o ciclo menstrual e obter a 
+classificação correta das fases do ciclo \cite{becker2005}.
+Essas estratégias e métodos utilizam-se de medidas hormonais, temperatura corporal basal(TCB) e 
+avaliações baseadas em calendário. O ciclo menstrual idealizado tem 28 dias, mas pode variar entre 21 
+e 35 dias \cite{lenton1984a}, começando a ser contabilizado a partir do primeiro dia da menstruação. 
+O ciclo é dividido, principalmente, em 2 fases, sendo: a fase folicular e a fase lútea 
+\cite{brondin2008}.
+
+
+A fase folicular é contabilizada a partir do primeiro dia da menstruação até o dia de pico do hormônio 
+luteinizante(LH). Essa fase é caracterizada pelo desenvolvimento folicular e, normalmente, tem o 
+comprimento de 14 
+dias, podendo ter variações dependendo da idade \cite{lenton1984a}.
+
+Na fase folicular, um folículo é selecionado para se tornar um óvulo, e aumenta a produção do estradiol
+que faz surgir o LH e a progesterona. O surgimento desses hormônios caracterizam clinicamente o ciclo 
+ovulatório e o início da fase lútea \cite{fritz2010}. É nesse ciclo que ocorre o aumento da temperatura
+basal e o óvulo pode ser fecundado. 
+
+
+Na fase lútea, a progesterona prepara o endométrio para a chegada do óvulo no caso de concepção. 
+Caso não haja fecundação, a progesterona decai progressivamente e causa novamente a menstruação, 
+continuando assim o ciclo \cite{nikas2003}.
+
+
+O estradiol e a progesterona são altamente lipofílicos, ou seja, se dissolvem em gordura, óleos e 
+lipídios em geral, e facilmente atravessam a barreira sangue-cérebro. Estudos em animais e estudos 
+post-mortem em mulheres na idade reprodutiva e na menopausa indicaram que esses hormônios estavam 
+acumulados no cérebro \cite{bixo1997}. Os receptores desses hormônios estão presentes em áreas 
+cerebrais associadas à reprodução, função cognitiva e processamento emocional, como o hipotálamo e o 
+sistema límbico \cite{gruber2002, brinton2008}.
+
+
+Tendo como teoria que os hormônios podem influenciar a vida das mulheres, muitos estudos têm sido 
+realizados tentando determinar a influência da fase do ciclo menstrual na capacidade cognitiva, 
+motora e emocional das mulheres. Em 2014, \citeonline{poroma2014} realizaram um levantamento da 
+literatura existente que relacionam o ciclo reprodutivo feminino com as áreas de tarefas cognitivas, 
+tais como: habilidades espacial, visual, verbal, controle cognitivo, e aspectos emocionais.
+
+
+No estudo de \citeonline{poroma2014}, na parte de habilidade espacial visual, 
+\citeonline{hausmann2000}, \citeonline{maki2002}, \citeonline{courvoisier2013}, \citeonline{becker1982} e \citeonline{phillips1992} relataram uma melhora 
+nas habilidades no início da fase folicular. \citeonline{hampson2014} relatou melhora nas habilidades quando o 
+estradiol estava baixo. 
+
+
+Em tarefas verbais, o trabalho \cite{maki2002} relatou melhoras no meio da fase lútea. Outro 
+reportou que há melhor realização de tarefas verbais em mulheres que utilizam anticoncepcional(AC) 
+\cite{mordecai2008}. Por fim, dois trabalhos concluem que a realização das tarefas verbais é melhor 
+ao final das fases folicular e lútea \cite{Rosenberg2002, solis2004}.
+
+
+No aspecto emocional, vários estudos relacionaram as fases com a habilidade de reconhecer emoções 
+faciais. Em \citeonline{gasbarri2008}, os resultados indicaram que esse reconhecimento foi mais 
+preciso quando a progesterona estava alta. Entretanto, vários outros autores indicaram que o 
+reconhecimento piora na fase lútea, principalmente em reconhecer emoções negativas \cite{gasbarri2008}.
+Há ainda mais um estudo que correlacionou o aumento de hormônios do estresse com a fase lútea \cite{kirschbaum1999}.
+
+
+
+Já nos aspectos emocionais e comportamentais, no estudo de \citeonline{rosa2016}, levantou-se que, 
+durante o período da semana que antecede a menstruação e no período da menstruação, as mulheres 
+entrevistadas relataram sentir uma maior alteração psicológica ou comportamental. Essas alterações 
+compreendem variações de humor, irritabilidade, ansiedade, entre outros. Essas alterações podem ser 
+classificadas como transtorno disfórico pré-menstrual (TDPM) \cite{ACOG2000}.
+
+Esse estudo fundamenta-se no fato de que o ciclo menstrual influencia as emoções e os comportamentos 
+das mulheres. Como contribuição principal, propõe-se um aplicativo de recomendação, o qual procurará 
+indicar tarefas cotidianas que seriam mais fáceis ou mais difíceis de serem realizadas, dependendo do 
+perfil e da fase do ciclo menstrual que a mulher se encontra, além de conferir informações sobre como 
+a fase possivelmente influencia em suas habilidades. Espera-se que esse conhecimento beneficie, 
+adicionalmente, a inteligência emocional e, consequentemente, o desempenho cognitivo individual das 
+mulheres. 
+
+A inteligência emocional é medida utilizando \textit{Multifactor Emotional Intelligence Scale} (MEIS), 
+compreendendo três habilidades emocionais distintas: perceber, entender e regular emoções. Em linhas 
+gerais, a inteligência 
+emocional é \lq \lq A habilidade de monitorar os próprios sentimentos e emoções e de outros indivíduos, 
+discriminar entre eles e usar essas informações para guiar o pensamento e ações \rq \rq \cite{salovey1990}. 
+No estudo realizado por \citeonline{lam2002}, os autores relacionam o impacto da inteligência emocional 
+com o desempenho individual e confirmam a hipótese de 
+que a inteligência emocional influência no desempenho cognitivo individual. 
+
+Diante dos exposto, para as mulheres, 
+a possibilidade de adquirirem conhecimentos sobre como e porquê suas fases ciclicas influenciam suas vidas, 
+prevendo padrões em seus comportamentos, poderia aumentar 
+significativamente a inteligência emocional dessas mulheres. 
+
+
+O uso de recomendação, mais precisamente o uso dos conceitos associados aos sistemas de recomendação, 
+foi escolhido, pois esses sistemas tratam muitas informações, fornecendo recomendações personalizadas, 
+e procurando equacionar fatores como: precisão, novidade, dispersão e estabilidade \cite{bobadilla2013}.
+
+
+A problemática, portanto, compreende levantar os diversos tipos de perfis das mulheres de acordo com a 
+fase do ciclo menstrual delas, descobrir se existe diferença entre mulheres que utilizam ou não métodos 
+hormonais ou tem algum distúrbio hormonal, e como essas nuances influenciam as tarefas cotidianas delas. 
+Além de conseguir inferir em qual fase do ciclo a mulher está apenas com o uso do método do calendário. 
+Para isso, será utilizada a literatura existente sobre o assunto, pesquisas previamente publicadas e 
+pesquisas da própria autora, em formato de questionários, sendo esses aplicados a mulheres em idade 
+reprodutiva.
+
+
+Dado a particularidade do assunto, bem como por lidar com aspectos pessoais, vale ressaltar que este 
+estudo não tem como objetivo entrar na discussão de diferença entre sexo. Além disso, o estudo não 
+conta com o acompanhamento dedicado de um profissional da saúde, uma vez que a ideia não é representar 
+um tratamento médico ou algo nesse sentido. Trata-se apenas de um estudo, tendo como objetivo desenvolver 
+um aplicativo informativo, totalmente baseado na literatura especializada, e que estimula as mulheres a 
+se conhecerem melhor. 
+
+
+\section{Questões de Pesquisa}
+
+Com base no exposto na contextualização, o presente trabalho pretende colaborar com esses estudos, 
+os quais relacionam as fases do ciclo menstrual com as diferentes habilidades inerentes nas tarefas 
+cotidianas e profissionais das mulheres.
+
+Nesse sentido, as seguintes questões de pesquisa nortearão o trabalho, sendo:
+
+\begin{itemize}
+
+        \item Se existe essa influência das fases do ciclo menstrual na vida das mulheres, como adquirir esse conhecimento?
+
+        \item Por que seria importante adquirir esse conhecimento? 
+
+        \item Como utilizar esse conhecimento de forma a auxiliar as mulheres nas suas tarefas cotidianas e profissionais?
+
+\end{itemize}
+
+\section{Justificativa}
+
+Para uma mulher pode ser difícil monitorar, identificar padrões e antecipar mudanças físicas, 
+emocionais e comportamentais que existem no decorrer do ciclo, e como isso influencia a vida delas.
+
+Atualmente, existem muitos aplicativos no mercado que estão voltados para a questão reprodutiva, 
+e alguns até possuem \textit{features} para adicionar cotidianamente os sintomas sentidos, humor, 
+temperatura corporal, intensidade do fluxo, tipo de muco, medicamentos tomados, relações sexuais, 
+entre outras notas. Entretanto, existe uma carência de recursos que auxiliem de forma informativa bem 
+como com recomendações de tarefas baseadas no perfil e na fase do ciclo menstrual.
+
+Apesar dos avanços, relativamente poucas descobertas que correlacionam a influência hormonal com a 
+emoção, o comportamento e a cognição são de fato conclusivas \cite{poroma2014}. Portanto, esse estudo 
+também trará um levantamento sobre as influências do ciclo menstrual relatadas por um grupo de mulheres 
+em idade reprodutiva.
+
+
+\section{Objetivos}
+
+Seguem os objetivos Geral e Específicos atrelados a esse trabalho.
+
+\subsection{Objetivo Geral}
+
+
+Esse estudo propõe um aplicativo informativo e de recomendações de tarefas com base no perfil e no ciclo 
+menstrual, no intuito de apoiar as mulheres na identificação de mudanças; no autoconhecimeno; na inteligência emocional, e na produtividade pessoal.
+
+
+\subsection{Objetivos Específicos}
+
+Para atingir o objetivo geral, alguns objetivos específicos foram estabelecidos:
+
+\begin{itemize}
+
+        \item Definir um processo de coleta de dados sobre o perfil das mulheres de acordo com seus ciclos menstruais;
+        
+        \item Definir um processo de análise de resultados obtidos a partir dos dados coletados;
+
+        \item Definir um processo de contagem de ciclo para determinar em que fase do ciclo menstrual a mulher se encontra;
+
+        \item Definir um processo de recomendação de tarefas que podem ser mais facilmente ou dificilmente realizadas baseado na fase do ciclo, e
+
+        \item Desenvolver um aplicativo de recomendação de tarefas baseado nos processos definidos anteriormente.
+
+\end{itemize}
+
+\section{Organização dos Capítulos}
+
+A monografia está organizada nos seguintes capítulos:
+
+\begin{itemize}
+
+
+        \item Capítulo 2 - Referencial Teórico: descreve os conceitos que fundamentam o trabalho e o conhecimento necessário para que se compreenda a pesquisa realizada;
+        
+        \item Capítulo 3 - Suporte Tecnológico: aborda os principais suportes tecnológicos que viabilizarão o desenvolvimento da proposta;
+        
+        \item Capítulo 4 - Metodologia: acorda o plano metodológico que orienta o presente trabalho em termos conceituais, bem como de análise de resultados;
+
+        \item Capítulo 5 - Proposta: apresenta a proposta deste trabalho em si, e
+
+        \item Capítulo 6 - Resultados Obtidos: acorda os resultados alcançados até o momento, no escopo do TCC-01.
+          
+\end{itemize}
+% Como a concentração de estradiol e progesterona variam muito de mulher para mulher, utilizá-lo como medida única pode ser insuficiente para determinar individualmente a fase do ciclo \cite{poroma2014}.
+% em 1973 Barbara Sommer revisou toda a lieratura existente e concluiu, naquela época, que não existia evidencias que a fase do ciclo menstrual influenciava em mudanças na cognição e performance motora por causa de problemas na metodolodia. Co
+%Há uma diminuição significativa do comprimento da fase folicular de acordo com a idade das mulheres. Normalmente mulheres de 18 a 24 anos tem a fase com o comprimento de 14 dias e mulheres de 40 a 44 anos tem de 10 dias }. 
+%A fase folicular Quando um folículo é selecionado o FSH diminui gradativamente e progressivamente a produção de estradiol começa a aumentar. Quando o estradiol chega ao pico, na fase folícular, 12 a 24 horas depois o LH surge e a ovulação ocorre tipicamente de 10 a 12h depois do surgimento do LH \cite{fritz2010}. Clinicamente é possível determinar o ciclo ovulatório pelo surgimento do LH e a secreção de progesterona da fase lútea \cite{fritz2010}, também é possível determiná-lo pelo aumento da temperatura basalcorporal. Na ovulação, o folículo se transforma num corpus luteum que é capaz de sintetizar estradiol e progesterona e está pronto para ser fecundado.
