fix some texts errors

--- a/tcc2/editaveis/capfinal.tex
+++ b/tcc2/editaveis/capfinal.tex
@@ -1,13 +1,13 @@
 \chapter[Resultados Obtidos]{Resultados Obtidos}
 
-O ciclo menstrual tem 2 fases principais: a fase folicular e a fase Lútea. Dessas, a fase folicular 
+O ciclo menstrual tem duas fases principais: a fase folicular e a fase lútea. Dessas, a fase folicular 
 pode 
 ser dividida em fase folicular inicial, na qual ocorre a menstruação, e a fase folícular final, na qual 
 há a liberação do óvulo.
 Quando o óvulo é liberado, tem início a fase lútea, que também pode ser dividida em fase lútea inicial e 
 fase lútea final, sendo quando, para algumas pessoas, acontece a TPM.
 
-Durante essas fases, as pessoas passam por várias mudanças hormonais, que podem influênciar nas tarefas 
+Durante essas fases, as pessoas passam por várias mudanças hormonais, que podem influenciar nas tarefas 
 cotidianas, demandando mais energia para a realização de certas tarefas. Na fase folicular final e lútea inicial,
 foi relatada uma melhora significativa no desempenho das atividades cognitivas e verbais, enquanto no final da fase 
 lútea, há a relação com o aumento do cortisol, hormônio do stress e uma certa dificuldade na classificação 
