--- a/tcc2/editaveis/metodologia.tex
+++ b/tcc2/editaveis/metodologia.tex
@@ -1,13 +1,11 @@
 \chapter[Metodologia]{Metodologia}
 \label{ch:metodologia}
 
-\section{Considerações Iniciais}
-
-Neste capítulo, será apresentada a metodologia utilizada no desenvolvimento dessa 
+Neste capítulo será apresentada a metodologia utilizada no desenvolvimento dessa 
 monografia. Na seção 4.2, será detalhado a metodologia adotada, de acordo com os 
 critérios de abordagem, natureza, objetivos e procedimentos. A seção 4.3 acordará o fluxo 
 das atividades que foram desenvolvidas nesse primeiro momento do trabalho, e uma projeção das atividades 
-que serão desenvolvidas no Trabalho de Conclusão de Curso 2(TCC2). A seção 4.4 abordará a pesquisa bibliográfica.
+que serão desenvolvidas no Trabalho de Conclusão de Curso 2 (TCC2). A seção 4.4 abordará a pesquisa bibliográfica.
 A seção 4.5 focará na metodologia de desenvolvimento. A seção 4.6 apresenta como será conduzida a análise de resultados. 
 Por fim, a seção 4.7 ilustra 
 o cronograma das atividades já desenvolvidas ao longo do TCC1, bom como o provável cronograma para 
@@ -16,10 +14,9 @@ condução das atividades previstas no TCC2.
 
 \section{Classificação da Pesquisa}
 
-De acordo com \citeonline{gerhardt2009}, a metodologia é o estudo da organização, dos 
-caminhos a serem percorridos para se realizar uma pesquisa ou um estudo; ou para se 
-fazer ciência. No caso de uma pesquisa científica, ela pode ser classificada em 
-vários tipos: quanto à abordagem; quanto à natureza; quanto aos objetivos e quanto aos procedimentos.
+De acordo com \citeonline{gerhardt2009}, a metodologia é o estudo da organização dos 
+caminhos a serem percorridos para se realizar uma pesquisa, um estudo ou para se 
+fazer ciência. No caso de uma pesquisa científica, ela pode ser classificada quanto à abordagem; quanto à natureza; quanto aos objetivos e quanto aos procedimentos.
 
 \subsection{Quanto à Abordagem}
 
@@ -35,13 +32,13 @@ Já a pesquisa quantitativa têm resultados que podem ser quantificados e se bas
 análise de dados brutos, tendendo a enfatizar o raciocínio dedutivo, as regras da lógica 
 e os atributos mensuráveis da experiência humana
 
-Tendo o conhecimento desses conceitos, nesse trabalho, a pesquisa é, predominantemente, 
-qualitativa, por possuir resultados não métricos que precisam de interpretação. 
+\textbf{Tendo o conhecimento desses conceitos, nesse trabalho a pesquisa é, predominantemente, 
+qualitativa por possuir resultados não métricos que precisam de interpretação.} 
 
 
 \subsection{Quanto à Natureza}
 
-Segundo \citeonline{gerhardt2009}, a pesquisa quanto à natureza pode ser dividida em: pesquisa 
+Segundo \citeonline{gerhardt2009}, a pesquisa quanto à natureza pode ser dividida em pesquisa 
 básica e pesquisa aplicada. A pesquisa básica gera conhecimentos novos, sem aplicação básica 
 prevista, e a pesquisa aplicada gera conhecimentos para aplicação prática, dirigidos à solução de 
 problemas específicos. Tendo o objetivo de desenvolver um aplicativo com os conhecimentos 
@@ -57,25 +54,18 @@ A pesquisa exploratória tem como objetivo o aprimoramento
 de ideias, ou a descoberta de intuições, o que a faz ter um planejamento flexível. 
 Essas pesquisas envolvem: (i) levantamento bibliográfico, (ii) entrevistas com pessoas 
 que tiveram experiência prática com o problema pesquisado, e (iii) análise de exemplos que 
-"estimulam a compreensão".
+``estimulam a compreensão''.
 
-
-%A pesquisa descritiva tem como objetivo principal descrever caracteristicas de determinada 
-%população ou fenomeno, ou o estabelecimento de relaçoes entre variáveis, definindo técnicas 
-%padronizadas de coleta de dados, tais como, questionários e observação sistemática. A 
-%pesquisa explicativa têm objetivo principal identificar os fatores que determinam ou contribuem 
-%para a ocorrência  dos fenômenos. 
-
-Essa monografia é portanto, predominantemente, exploratória, 
+Essa monografia é, predominantemente, exploratória, 
 por envolver levantamento bibliográfico e questionários com mulheres que têm experiência 
-prática com o problema. A própria definição do tema teve, em si, um caráter intuitivo. 
+prática com o problema. A própria definição do tema teve em si um caráter intuitivo. 
 
 \subsection{Quanto aos Procedimentos}
 
 \citeonline{gil1991} separa a pesquisa quanto aos 
 procedimentos em: experimental; bibliográfica; 
-documental; de campo; Ex-Post-Facto; 
-de levantamento; com survey; estudo de caso; 
+documental; de campo; \emph{Ex-Post-Facto}; 
+de levantamento; survey; estudo de caso; 
 participante; pesquisa-ação; etnográfica e etnometodológica.
 
 Essa pesquisa, quanto aos procedimentos, pode ser classificada como: pesquisa bibliográfica e 
@@ -83,7 +73,7 @@ estudo de caso.
 Ela é bibliográfica porque utiliza levantamento de referências teóricas já analisadas, 
 como livros e artigos científicos. É estudo de caso por 
 ser aplicado à comunidade criada pela própria autora, com 
-mulheres que tiveram interesse no tema.
+mulheres com interesse no tema.
 
 
 \section{Fluxo das Atividades}
@@ -108,7 +98,7 @@ possíveis aplicações da engenharia de software sobre o tema.
 que se interessaram pelo tema e resolveram apoiá-lo. Esse grupo é e será utilizado 
 para o estudo de caso.
 
-\textbf{Realizar Levantamento Bibliográfico}: nessa etapa, foi obtido um conhecimento 
+\textbf{Realizar levantamento bibliográfico}: nessa etapa, foi obtido um conhecimento 
 inicial do tema e levantadas publicações pertinentes sobre os tópicos dessa monografia. 
 
 \textbf{Elaborar proposta inicial}: nessa etapa, foi elaborada uma proposta inicial que 
@@ -254,7 +244,7 @@ um questionário para coleta de dados, descrito no Capítulo 5.
 Por fim, a preparação do relatório deu-se após a aplicação do questionário, acordado na etapa anterior
 \section{Cronograma}
 
-O cronograma da Tabela \ref{tab04} explicita as atividades executadas com seus respectivos prazos no TCC1, Já a Tabela \ref{tab05} 
+O cronograma da Tabela \ref{tab04} explicita as atividades executadas com seus respectivos prazos no TCC1, já a Tabela \ref{tab05} 
 explicita as prováveis datas de execução do TCC2.
 Para fins de uma visualização mais adequada, foi considerado com a letra \textbf{P}, a
 data prevista, e a letra \textbf{E}, para a data Executada.
@@ -291,7 +281,7 @@ data prevista, e a letra \textbf{E}, para a data Executada.
 \end{table}
 
 
-O cronograma do TCC1 sofreu muitas alterações devido à pandemia da covid-19. O semestre de 2020/1 estava previsto para iniciar no mês de março e finalizar em julho, mas houve uma pausa no 
+O cronograma do TCC1 sofreu muitas alterações devido à pandemia da Covid-19. O semestre de 2020/1 estava previsto para iniciar no mês de março e finalizar em julho, mas houve uma pausa no 
 mês de março e o retorno ocorreu no mês de agosto. Algumas atividades continuaram sendo desenvolvidas durante essa pausa.
 
 
@@ -339,7 +329,7 @@ Para o gerenciamento das atividades do escopo do TCC1, foi utilizado o Kanban. C
 Para a coleta e análise de resultados, foi utilizado um estudo 
 de casos aplicado a um grupo de mulheres, sendo esse criado pela 
 autora. Cabe ressaltar que a análise de resultados ainda será 
-realizada no escopo do TCC2. Portanto, o estudo de casos, com o 
+realizada no escopo do TCC2. Portanto, o estudo de casos com o 
 grupo de interessadas, ainda será objeto de estudo.
 
 
