--- a/tcc2/editaveis/proposta.tex
+++ b/tcc2/editaveis/proposta.tex
@@ -1,6 +1,5 @@
 \chapter[Proposta]{Proposta}
 \label{ch:proposta}
-\section{Considerações Iniciais }
 
 A ideia sobre o domínio ciclo menstrual e atividades surgiu a 
 partir de um video\footnote{video :https://www.youtube.com/watch?v=sNRi9A6LaHM. Último acesso em: 03/12/2020} em que a palestrante comenta sobre um 
@@ -16,7 +15,7 @@ vivência, que certos padrões se repetiam, ciclo após ciclo.
 Essa inspiração foi levada aos 
 orientadores, e começaram a ser discutidas possíveis aplicações da 
 engenharia de software sobre o domínio. Duas ideias centrais 
-foram levantadas. 
+foram identificadas. 
 
 A primeira ideia foi utilizar aprendizado de máquina para 
 acordar um perfil comportamental com base no ciclo menstrual e 
@@ -28,7 +27,7 @@ a autora não continha. Além disso, o termo produtividade também
 foi descartado por envolver uma medida muito subjetiva e questões éticas e morais. 
 
 A segunda ideia surgiu baseada no trabalho de \citeonline{leticia}, Sistema de Recomendação para Atribuição de Tarefas de Testes 
-Baseado em Perfil de Testadores, que levantou a questão se seria 
+Baseado em Perfil de Testadores, que identificou a questão se seria 
 possível desenvolver um tema similar, só que no
 contexto de recomendações de tarefas baseadas no perfil e 
 ciclo menstrual. A segunda ideia foi a escolhida para ser 
@@ -40,7 +39,7 @@ profissional da área da saúde? Optou-se por não envolver
 terceiros no desenvolvimento do trabalho, por causa da 
 burocracia envolvida e da dificuldade 
 em encontrar uma pessoa com disponibilidade e interesse em 
-acompanhar o projeto. A segunda problemática foi, 
+acompanhar o projeto. A segunda problemática foi 
 como adquirir os dados necessários para desenvolver um 
 Sistema de Recomendação? Optou-se por criar um grupo 
 específico que servirá como estudo de caso, participando tanto 
@@ -62,7 +61,7 @@ nesse momento, as notas não precisam ser compartilhadas e que, posteriormente, 
 aquelas que se sentissem confortáveis em compartilhar o que perceberam 
 durante esse trabalho interno.
 
-As discussões com o grupo e o estudo inicial da referência bibliográfica foram então utilizados para 
+As discussões com o grupo e o estudo inicial da referência bibliográfica foram então utilizadas para 
 delimitar questões que seriam aplicadas à primeira coleta de dados a partir de um questionário.
 
 \subsection{Definição da Plataforma}
@@ -93,7 +92,7 @@ participantes se sentissem mais confortáveis respondendo-o. Ao todo, o question
 		\toprule
 		\textbf{Perguntas fechadas} \\
         \midrule
-        \begin{minipage} [t] {1\textwidth} Qual a sua Idade?  \end{minipage} \\
+        \begin{minipage} [t] {1\textwidth} Qual a sua idade?  \end{minipage} \\
         \midrule
         \begin{minipage} [t] {1\textwidth} Você utiliza algum método contraceptivo hormonal?   \end{minipage}\\
         \midrule
@@ -223,7 +222,7 @@ Na Tabela \ref{tab09} seta $\uparrow$ indica menor gasto de energia
 (tarefas mais fáceis); a seta $\downarrow$ indica maior gasto de 
 energia(tarefas mais difíceis), e - para neutro.
 
-No escopo do TCC2, será realizado mais um questionário específico para as 
+No escopo do TCC2 será realizado mais um questionário específico para as 
 tarefas. Essas tarefas poderão ser, então, mais bem classificadas de acordo 
 com os perfis.
 
